--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,5 @@
+/* @import url('https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap'); */
+
 * { 
     box-sizing: border-box;
     margin: 0;
@@ -20,6 +22,7 @@ html, body {
 
 #shipArea { 
     max-width: 20%;
+    padding: 0.5em;
     display: flex;
     flex-direction: column;
     background-color: rgba(240, 248, 255, 0.11);
@@ -28,7 +31,8 @@ html, body {
 }
 
 #shipAreaY {
-    width: 20%;
+    max-height: 20%;
+    padding: 0.5em;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -36,6 +40,7 @@ html, body {
     border-radius: 1em;
     margin: 1em;
 }
+
 
 .draggableShip{ 
     min-width: 10px;
