--- a/src/style.css
+++ b/src/style.css
@@ -59,6 +59,7 @@ body {
   flex-direction: column;
   border-radius: 1em;
   margin: 1em;
+  user-select: none;
 }
 
 #shipAreaY {
@@ -69,6 +70,7 @@ body {
   flex-direction: row;
   flex-wrap: wrap;
   border-radius: 1em;
+  user-select: none;
 }
 
 #oponentsShipArea {
